...
    "Ayarlar" : {

    },
    "Başa sar" : {

    },
    "başka durumda" : {

    },
    "Başka durumda" : {

    },
    "Belirli bir andan sonra" : {
...
    "Bölgende bir kareye dokun." : {

    },
    "Boş hücre" : {

    },
    "Boşlukları doldur, sonra mühürle." : {

    },
    "Bu cephede bu eylem yok. Dokunup değiştir ya da sil." : {

    },
    "Bu cephede bu koşul yok. Dokunup değiştir ya da sil." : {
...
    "Bulunduğum arazi" : {

    },
    "Bunu bir emre çeviremedim. Örneğin: “düşman 3 kareden yakınsa geri çekil”." : {

    },
    "Bütçe" : {

    },
    "Bütçe yetmiyor." : {

    },
    "buton 8pt" : {
...
    "Canım azaldığında" : {

    },
    "Cephe Yarıldı" : {

    },
    "Cephe yarıldı." : {

    },
    "DAĞIL" : {

    },
    "Dağıl" : {
...
    "Doğruysa mühürle. Yanlışsa pusulaya dokunup düzelt." : {

    },
    "Dostlarım azaldığında" : {

    },
    "Duraklat" : {

    },
    "düşman" : {

    },
    "Düşman " : {
...
    "düşman %@ kareden yakınsa" : {

    },
    "düşman %lld kareden yakınsa" : {

    },
    "düşman 3 kareden yakınsa" : {

    },
    "Düşman bütçesi" : {

    },
    "Düşman büyüdü. Her tipe kendi emrini yaz." : {
...
    "Düzeltmek için dokun." : {

    },
    "Düzenle" : {

    },
    "Ekle" : {

    },
    "emir" : {

    },
    "Emir ekle" : {

    },
    "Emir Kütüphanesi" : {

    },
    "Emir tamamlanmadı" : {

    },
    "Emirleri Düzelt" : {

    },
    "Emirleri Yaz" : {

    },
    "Emirlerin" : {

    },
    "Emirsiz birlik ne yapar?" : {
...
    "Emri düzenle" : {

    },
    "Emri Düzenle" : {

    },
    "Emri söyle" : {

    },
    "Emri yaz" : {

    },
    "En yakın / en zayıf" : {
...
    "Geri" : {

    },
    "Geri çekil" : {

    },
    "GERİ ÇEKİL" : {

    },
    "Hat tutuldu." : {

    },
    "Hat, süre sonunda tutuldu." : {

    },
    "Hat, süre sonunda yarıldı." : {
...
    "Hazır emir setleri" : {

    },
    "Hazır emir setlerini gör" : {

    },
    "Hazırlan" : {

    },
    "Henüz emir yok." : {

    },
    "Hız" : {

    },
    "Hızlıdır, okçuları avlar. Hücumda ilk vuruşu sert indirir." : {
...
    "İki ayrı varsayılan emir yazdın. Birini seç." : {

    },
    "İlerle" : {

    },
    "İLERLE" : {

    },
    "İlk emrini yaz." : {

    },
    "İlk karma ordu. Mızrakçı süvariyi karşılar." : {
...
    "kare" : {

    },
    "Karşındaki ordu" : {

    },
    "Kaydet" : {

    },
    "kayıp" : {

    },
    "kilitli" : {
...
    "Kuru Vadi" : {

    },
    "Kuşatıldığımda" : {

    },
    "kuşatıldıysam" : {

    },
    "Malzeme tokenları. Marka rengi yok: soğuk kum, ham kâğıt, oksitlenmiş pirinç, çiğ demir." : {

    },
    "Menzil" : {
...
    "moralim %%%@ altındaysa" : {

    },
    "Moralim azaldığında" : {

    },
    "Mühürle" : {

    },
    "Ne yapacaklarını anlayamadım. Eylemi başka bir sözle yaz: “… geri çekil”." : {

    },
    "Ne yapsın?" : {
...
    "ormandaysam" : {

    },
    "orta" : {

    },
    "Oynat" : {

    },
    "panel 14pt" : {

    },
    "pusula 2pt" : {
...
    "Savaş berabere bitti." : {

    },
    "Savaş şu hızda başlasın" : {

    },
    "Savaşı Başlat" : {

    },
    "Savaşın zaman şeridi" : {

    },
    "Sayı" : {
...
    "Sonra açılacak" : {

    },
    "Sonraki Cephe" : {

    },
    "Sonuç" : {

    },
    "Söylediğin emri yazıya dökmek için ses paketi bir kez indirilir. Sonra internetsiz çalışır; sesin cihazdan çıkmaz." : {

    },
    "Söylemeyi bitir" : {

    },
    "Su" : {

    },
    "şu an %lld. emir: %@" : {
...
    "Varsayılan emri uygular: İLERLE. Savaşı başlat ve izle." : {

    },
    "Varsayılan emrin yerine geçer." : {

    },
    "Vazgeç" : {

    },
    "yakınımda %@ fazla düşman varsa" : {

    },
    "yanımda %@ az dost varsa" : {
...
    "Yazılan emir" : {

    },
    "Yeni Emir" : {

    },
    "Yerinde kal" : {

    },
    "YERİNDE KAL" : {

    },
    "Yeteneğini kullan" : {

    },
    "YETENEĞİNİ KULLAN" : {
...
